grammar.js
    source_file: $ => seq(
      optional(seq($._eol,repeat($._line_end))), // skip whitespace
      repeat($.line)
    ),

    line: $ => seq(
      optional($.line_number),
      optional($.label),
      choice(
        seq(
          repeat(
            seq(
              optional($._statement),
              choice(
                $.continuation,
                $.statement_separator
              ),
            ),
          ),
          $._statement,
        ),
        $._single_line_statement,
        $.multiline_comment,
        $.doc_comment
      ),
      seq($._eol,repeat($._line_end))
    ),

    _line_end: $ => /(\r?\n)/,

    _single_line_statement: $ => seq(
      choice(
        $.dim_statement,
        $.option_statement,
      ),
      optional($.comment)
    ),

    _statement: $ => choice(
      $.comment,
      seq(
        choice(
          ...getStatements($)
        ),
        optional($.comment)
      ),
      $.else_statement,
      $.if_statement
    ),

    string_spec: $ => alias(token(choice(
      /c/i,
      /cc/i,
      /cr/i,
      /cu/i,
      /v/i,
      /vl/i,
      /vu/i
    )), "keyword"),

    internal_spec: $ => alias(token(choice(
      /b/i,
      /bl/i,
      /bh/i,
      /pd/i,
      /zd/i
    )), "keyword"),

    numeric_spec: $ => alias(token(choice(
      /g/i,
      /gz/i,
      /n/i,
      /nz/i,
    )),"keyword"),

    floating_point_spec: $ => alias(token(choice(
      /d/i,
      /s/i,
      /l/i,
    )),"keyword"),

    field_length: $ => choice(
      $.int,
      $.numberreference
    ),

    fractional_length: $ => seq(
      ".",
      choice(
        alias(token.immediate(/\d+/), $.int),
        $.numberreference
      )
    ),

    pos_spec: $ => keyword("pos"),
    skip_spec: $ => keyword("skip"),
    x_spec: $ => token(/x/i),
    pic_spec: $ => seq(
      keyword(/pic/i),
      token.immediate("("),
      token(/[^)\r\n]*/),
      ")",
    ),

    multi_spec: $ => seq(
      choice(
        alias($.multi_spec_var_name, $.numberreference),
        $.int
      ),
      field("operator", alias("*", $._))
    ),

    spec_group: $ => seq(
      optional($.multi_spec),
      "(",
      commaSep1(
        $.form_spec
      ),
      ")"
    ),

    form_spec: $ => choice(
      $.internal_form_spec,
      $.string_form_spec,
      $.numeric_form_spec,
      $.floating_point_form_spec,
      $.skip_form_spec,
      $.pos_form_spec,
      $.x_form_spec,
      $.literal_string_form_spec,
      $.pic_form_spec
    ),

    literal_string_spec: $ => alias(token(choice(
      /"[^"\n]*"/,
      /'[^'\n]*'/,
      /`[^`\n]*`/,
    )),$.string),

    form_statement: $ => seq(
      alias(STATEMENTS.form, "statement"),
      commaSep1(
        choice(
          $.form_spec,
          $.spec_group
        )
      ),
      optional(",")
    ),

    if_statement: $ => prec.right(seq(
      alias(STATEMENTS.if, "statement"),
      $.conditional_expression,
      keyword("then"),
      optional(","),
      optional(choice(
        $.comment,
        seq(
          choice(
          ...getStatements($),
        ),optional($.comment),
          optional(choice(
            $.single_line_if,
            $.single_line_if_trailing_else,
            $.single_line_else_with_cont
          ))
        ),
        $.single_line_if,
        $.single_line_if_trailing_else,
        $.single_line_else_with_cont
      )),
    )),

    int: $ => /\d+/,

    mat_numeric_array_expression: $ => seq(
      alias($.numberreference, $.numberarray),
      optional(
        seq(
          "(",
          choice(
            $.mat_size,
            $.mat_range
          ),
          ")"
        )
      ),
      optional($.mat_assignment_numeric)
    ),

    mat_size: $ => seq(
      commaSep1($.numeric_expression),
    ),

    mat_string_array_expression: $ => seq(
      alias($.string_name, $.stringarray),
      optional(
        seq(
          "(",
          choice(
            $.mat_size,
            $.mat_range
          ),
          ")"
        )
      ),
      optional(
        seq(
          field("operator", $.assignment_op),
          choice(
            seq(
              alias($.string_name, $.stringarray),
              optional(seq(
                "(",
                $.mat_range,
                ")",
              )),
            ),
            seq(                  
              "(",
              $.string_expression,
              ")"
            )
          )
        )
      )
    ),

    mat_statement: $ => seq(
      $._mat,
      choice(
        $.mat_string_array_expression,
        $.mat_numeric_array_expression,
      )
    ),

    print_statement: $ => seq(
      alias(STATEMENTS.print, "statement"),
      optional(choice(
        $.print_output,
        $.print_fields,
        $.print_border,
        $.print_using,
        seq(
          $.channel,
          choice(
            seq(
              ":",
              optional($.print_output)
            ),
            seq(
              ",",
              choice(
                $.print_fields,
                $.print_border,
                $.print_using,
              )
            )
          )
        )
      )),
      optional($.error_condition_list)
    ),

    print_output: $ => seq(
        repeat(choice(
          ";",
          ","
        )),
        choice(
          $.expression,
          $.array_group
        ),
        repeat(prec.right(seq(
          repeat1(choice(
            ";",
            ","
          )),
          optional(
          choice(
            $.expression,
            $.array_group
          )),
        )))
      )
    ,

    let_statement: $ => seq(
      optional(alias(STATEMENTS.let, "statement")),
      choice(
        $.string_expression,
        $.numeric_expression
      ),
      optional($.error_condition_list)
    ),

    expression: $ => choice(
      $.string_array_expression,
      $.numeric_array_expression,
      $.numeric_expression,
      $.string_expression
    ),

    string_array_expression: $ => choice(
      $.string_array_forced_assignment_expression,
      $.string_array_primary_expression
    ),

    numeric_array_expression: $ => choice(
      $.numeric_array_forced_assignment_expression,
      $.numeric_array_primary_expression
    ),

    numeric_expression: $ => choice(
      $.numeric_function_assignment,
      $.numeric_forced_assignment_expression,
      $.numeric_unary_expression,
      $.numeric_binary_expression,
      $.numeric_primary_expression,
    ),

    conditional_expression: $ => choice(
      $.conditional_numeric_function_assignment,
      $.conditional_numeric_forced_assignment_expression,
      $.conditional_unary_expression,
      $.conditional_binary_expression,
      $.numeric_conditional_primary_expression
    ),

    string_expression: $ => choice(
      $.string_function_assignment,
      $.string_forced_assignment_expression,
      $.string_binary_expression,
      $.string_assignment,
      $.string_primary_expression,
    ),

    conditional_string_expression: $ => choice(
      $.conditional_string_forced_assignment_expression,
      $.conditional_string_binary_expression,
      $.conditional_string_primary_expression,
    ),

    concat_op: $ => "&",
    
    string_binary_expression: $ => prec.left('binary_plus', seq(
      field('left', $.string_expression),
      field('operator', $.concat_op),
      field('right', $.string_expression)
    )),

    conditional_string_binary_expression: $ => prec.left('binary_plus', seq(
      field('left', $.conditional_string_expression),
      field('operator', $.concat_op),
      field('right', $.conditional_string_expression)
    )),

    binary_plus_op: $ => token(choice(
      '+',
      '-'
      )),

    binary_eq_op: $ => token(choice(
      '==',
      '~=',
      )),

    binary_cond_eq_op: $ => token(choice(
      '=',
      '==',
      '~=',
      )),

    numeric_binary_expression: $ => choice(
      prec.left('binary_relation',seq(
        field('left', $.numeric_expression),
        field('operator', $.binary_relation_operator),
        field('right', $.numeric_expression)
      )),
      prec.left('logical_and',seq(
        field('left', $.numeric_expression),
        field('operator', $.logical_and_op),
        field('right', $.numeric_expression)
      )),
      prec.left('logical_or',seq(
        field('left', $.numeric_expression),
        field('operator',$.logical_or_op),
        field('right', $.numeric_expression)
      )),
      prec.left('binary_shift',seq(
        field('left', $.numeric_expression),
        field('operator', $.binary_shift_op),
        field('right', $.numeric_expression)
      )),
      prec.left('binary_plus',seq(
        field('left', $.numeric_expression),
        field('operator', $.binary_plus_op),
        field('right', $.numeric_expression)
      )),
      prec.left('binary_times',seq(
        field('left', $.numeric_expression),
        field('operator', $.binary_times_op),
        field('right', $.numeric_expression)
      )),
      prec.left('binary_equality',seq(
        field('left', $.numeric_expression),
        field('operator', $.binary_eq_op),
        field('right', $.numeric_expression)
      )),
      prec.right('binary_exp',seq(
        field('left', $.numeric_expression),
        field('operator', $.binary_exp_op),
        field('right', $.numeric_expression)
      )),
      prec.left('binary_relation',seq(
        field('left', $.string_expression),
        field('operator', $.binary_relation_operator),
        field('right', $.string_expression)
      )),
      prec.left('binary_equality',seq(
        field('left', $.string_expression),
        field('operator', $.binary_eq_op),
        field('right', $.string_expression)
      ))
    ),

    conditional_binary_expression: $ => choice(
      prec.left('binary_relation',seq(
        field('left', $.conditional_expression),
        field('operator', $.binary_relation_operator),
        field('right', $.conditional_expression)
      )),
      prec.left('logical_and',seq(
        field('left', $.conditional_expression),
        field('operator', $.logical_and_op),
        field('right', $.conditional_expression)
      )),
      prec.left('logical_or',seq(
        field('left', $.conditional_expression),
        field('operator',$.logical_or_op),
        field('right', $.conditional_expression)
      )),
      prec.left('binary_shift',seq(
        field('left', $.conditional_expression),
        field('operator', $.binary_shift_op),
        field('right', $.conditional_expression)
      )),
      prec.left('binary_plus',seq(
        field('left', $.conditional_expression),
        field('operator', $.binary_plus_op),
        field('right', $.conditional_expression)
      )),
      prec.left('binary_times',seq(
        field('left', $.conditional_expression),
        field('operator', $.binary_times_op),
        field('right', $.conditional_expression)
      )),
      prec.left('binary_equality',seq(
        field('left', $.conditional_expression),
        field('operator', $.binary_cond_eq_op),
        field('right', $.conditional_expression)
      )),
      prec.right('binary_exp',seq(
        field('left', $.conditional_expression),
        field('operator', $.binary_exp_op),
        field('right', $.conditional_expression)
      )),
      prec.left('binary_relation',seq(
        field('left', $.conditional_string_expression),
        field('operator', $.binary_relation_operator),
        field('right', $.conditional_string_expression)
      )),
      prec.left('binary_equality',seq(
        field('left', $.conditional_string_expression),
        field('operator', $.binary_cond_eq_op),
        field('right', $.conditional_string_expression)
      ))
    ),

    unary_operator: $ => token(choice('~', '-', '+', /not[ \t]/i)),

    numeric_unary_expression: $ => prec.left('unary_void', seq(
      field("operator", $.unary_operator),
      field('argument', $.numeric_expression)
    )),

    conditional_unary_expression: $ => prec.left('unary_void', seq(
      field('operator', $.unary_operator),
      field('argument', $.conditional_expression)
    )),

    numeric_array_primary_expression: $ => choice(
      $.numberarray
    ),

    string_array_primary_expression: $ => choice(
      $.stringarray,
    ),

    numeric_primary_expression: $ => choice(
      $._numeric_reference,
      $.parenthesized_numeric_expression,
      $.number,
      $.numeric_call_expression
    ),

    numeric_conditional_primary_expression: $ => choice(
      $._numeric_reference,
      $.conditional_parenthesized_numeric_expression,
      $.number,
      $.numeric_call_expression
    ),

    string_primary_expression: $ => choice(
      $.parenthesized_string_expression,
      $._string_reference,
      $.string,
      $.template_string,
      $.string_call_expression
    ),

    conditional_string_primary_expression: $ => choice(
      $.conditional_parenthesized_string_expression,
      $._string_reference,
      $.string,
      $.template_string,
      $.string_call_expression
    ),

    numeric_call_expression: $ => choice(
      $.numeric_system_function,
      $.numeric_user_function,
      alias($.udim, $.numeric_system_function),
    ),

    string_call_expression: $ => choice(
      $.string_system_function,
      $.string_user_function
    ),

    numeric_system_function: $ => choice(
      seq(
        alias(/rem/i, $.function_name),
        field('arguments', $.arguments)
      ),
      seq(
        alias(token(choice(...NUMERIC_SYSTEM_FUNCTIONS)), $.function_name),
        optional(field('arguments', $.arguments))
      )
    ),

    string_system_function: $ => seq(
      alias(token(choice(...STRING_SYSTEM_FUNCTIONS)), $.function_name),
      optional(field('arguments', $.arguments)),
      repeat(
        seq(
          "(",
          $.range,
          ")"
        )
      )
    ),

    forced_assignment_op: $ => ":=",

    argument: $ => choice(
      $.expression,
      $.param_substitution,
    ),
    
    arguments: $ => seq(
      "(",
      optional($.argument),
      repeat(seq(
        ",",
        optional($.argument)        
      )),
      ")"
    ),

    string: $ => choice(
      seq(
        '"',
        token.immediate(repeat(choice(
          /[^"\r\n]/,
          "\"\""
        ))),
        '"',
        repeat(seq(
          "(",
          $.range,
          ")"
        ))
      ),
      seq(
        "'",
        token.immediate(repeat(choice(
          /[^'\r\n]/,
          "''"
        ))),
        "'",
        repeat(seq(
          "(",
          $.range,
          ")"
        ))
      ),
    ),

    parenthesized_string_expression: $ => seq(
      '(',
      $.string_expression,
      ')',
      repeat(seq(
        "(",
        $.range,
        ")"
      ))
    ),

    conditional_parenthesized_string_expression: $ => seq(
      '(',
      $.conditional_string_expression,
      ')',
      repeat(seq(
        "(",
        $.range,
        ")"
      ))
    ),

    parenthesized_numeric_expression: $ => seq(
      '(',
      $.numeric_expression,
      ')'
    ),

    conditional_parenthesized_numeric_expression: $ => seq(
      '(',
      $.conditional_expression,
      ')'
    ),

    string_array_forced_assignment_expression: $ => prec.right('assign', seq(
      field('left', $.stringarray),
      field("operator", $.forced_assignment_op),
      field('right', choice(
        seq(
          "(",
          choice(
            $.string_expression,
            $.string_array_expression
          ),
          ")"
        ),
        $.string_array_expression
      ))
    )),

    assignment_op: $ => "=",
    conditional_numeric_forced_assignment_op: $ => token(choice(...FORCED_ASSIGNMENT_OPERATORS)),
    numeric_forced_assignment_op: $ => choice($.conditional_numeric_forced_assignment_op, $.assignment_op),

    _mat: $ => /mat[ \t]/i,
