test/corpus/expression.txt
============================================
strings
============================================

let a="test"
let bar='foo'
let foo=`bar {{baz}}`

---
    (source_file
      (line
        (statement
          (let_statement
            (primary_expression
              (numberreference
                (numberidentifier)))))))

============================================
parenthesized_expression
============================================

let (test)

---
    (source_file
      (line
        (statement
          (let_statement
            (primary_expression
              (numberreference
                (numberidentifier)))))))

============================================
numberic variable expression
============================================

let a

---
    (source_file
      (line
        (statement
          (let_statement
            (primary_expression
              (numberreference
                (numberidentifier)))))))

============================================
assignment expression
============================================

let a=1

---
    (source_file
      (line
        (statement
          (let_statement
            (primary_expression
              (numberreference
                (numberidentifier)))))))
                
============================================
numeric array expression
============================================

print mat a

---
    (source_file
      (line
        (statement
          (print_statement
            (numberarray
              (numberidentifier))))))

============================================
numeric array expression (w/range)
============================================

print mat foo(1:10)

---
    (source_file
      (line
        (statement
          (print_statement
            (numberarray
              (numberidentifier))))))                          
