test/corpus/form.txt
=============================================================
numeric_form_spec
=============================================================
form 1*g 1,G 2,N 3,NZ 4 
---

(source_file
  (line
    (form_statement
      (form_spec
        (multi_spec
          (int)
          (_))
        (numeric_spec)
        (field_length
          (int)))
      (form_spec
        (numeric_spec)
        (field_length
          (int)))
      (form_spec
        (numeric_spec)
        (field_length
          (int)))
      (form_spec
        (numeric_spec)
        (field_length
          (int))))))

=============================================================
precision
=============================================================
form pd 8.precision
---

(source_file
  (line
    (form_statement
      (form_spec
        (internal_spec)
        (field_length
          (int))
        (fractional_length
          (numberreference
            (numberidentifier)))))))

=============================================================
skip_form_spec
=============================================================
form skip 1, c 4, skip 2,c 3 
---

(source_file
  (line
    (form_statement
      (form_spec
        (skip_spec)
        (int))
      (form_spec
        (string_spec)
        (int))
      (form_spec
        (skip_spec)
        (int))
      (form_spec
        (string_spec)
        (int)))))

=============================================================
pos_form_spec
=============================================================
form pos 100, c 5 
---

(source_file
  (line
    (form_statement
      (form_spec
        (pos_spec)
        (int))
      (form_spec
        (string_spec)
        (int)))))

=============================================================
x_form_spec
=============================================================
form x 5 
---

(source_file
  (line
    (form_statement
      (form_spec
        (x_spec)
        (int)))))

=============================================================
string_form_spec
=============================================================
form c, CC, CR 5, CU 6,V 4,VL 4,VU 4  
---

(source_file
  (line
    (form_statement
      (form_spec
        (string_spec))
      (form_spec
        (string_spec))
      (form_spec
        (string_spec)
        (int))
      (form_spec
        (string_spec)
        (int))
      (form_spec
        (string_spec)
        (int))
      (form_spec
        (string_spec)
        (int))
      (form_spec
        (string_spec)
        (int)))))

=============================================================
internal_form_spec
=============================================================
form B 1,BL 2,BH 3,PD 7,ZD 
---

(source_file
  (line
    (form_statement
      (form_spec
        (internal_spec)
        (field_length
          (int)))
      (form_spec
        (internal_spec)
        (field_length
          (int)))
      (form_spec
        (internal_spec)
        (field_length
          (int)))
      (form_spec
        (internal_spec)
        (field_length
          (int)))
      (form_spec
        (internal_spec)))))

=============================================================
literal_string_form_spec
=============================================================
form 3*"literal", 'literal', `literal` 
---

(source_file
  (line
    (form_statement
      (form_spec
        (multi_spec
          (int)
          (_))
        (literal_string_spec
          (string)))
      (form_spec
        (literal_string_spec
          (string)))
      (form_spec
        (literal_string_spec
          (string))))))

=============================================================
floating_point_form_spec
=============================================================
form D,S,L 
---

(source_file
  (line
    (form_statement
      (form_spec
        (floating_point_spec))
      (form_spec
        (floating_point_spec))
      (form_spec
        (floating_point_spec)))))

=============================================================
pic_form_spec
=============================================================
form PIC(##/##/##), PIC($$$,$$$), PIC($********.**), 2*PIC(---),2*PIC(ZZZZZ-) 
---

(source_file
  (line
    (form_statement
      (form_spec
        (pic_spec))
      (form_spec
        (pic_spec))
      (form_spec
        (pic_spec))
      (form_spec
        (multi_spec
          (int)
          (_))
        (pic_spec))
      (form_spec
        (multi_spec
          (int)
          (_))
        (pic_spec)))))

=============================================================
spec_group with trailing comma
=============================================================
form 6*(G 2,',',)
---

(source_file
  (line
    (form_statement
      (spec_group
        (multi_spec
          (int)
          (_))
        (form_spec
          (numeric_spec)
          (field_length
            (int)))
        (form_spec
          (literal_string_spec
            (string)))))))
